--- a/GList/Base.lproj/Main.storyboard
+++ b/GList/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C48b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qzd-Ub-y18">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C48b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gFy-cY-xl3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -7,142 +7,91 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--GList-->
-        <scene sceneID="tne-QT-ifu">
+        <!--View Controller-->
+        <scene sceneID="bk4-Gd-ayz">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GList" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="gFy-cY-xl3" customClass="ViewController" customModule="GList" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="hB6-1f-GsQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="5qJ-jc-Nwa"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="DQy-Py-FKb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="yiM-ub-daj">
-                                <rect key="frame" x="16" y="64" width="343" height="74"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="VCx-Us-LZ3">
+                                <rect key="frame" x="0.0" y="20" width="375" height="66"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAC-MA-aCw">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cart Total" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ijM-R1-0Gh">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cart Total" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgi-s8-a6J">
-                                        <rect key="frame" x="0.0" y="20.5" width="343" height="30"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ALb-qz-Ljd">
-                                        <rect key="frame" x="0.0" y="50.5" width="343" height="23.5"/>
-                                        <attributedString key="attributedText">
-                                            <fragment content="$0.00">
-                                                <attributes>
-                                                    <color key="NSColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <font key="NSFont" metaFont="system" size="20"/>
-                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                                </attributes>
-                                            </fragment>
-                                        </attributedString>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wA-JT-4vo">
+                                        <rect key="frame" x="0.0" y="30" width="375" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iCX-FB-nfh">
-                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <items>
-                                    <tabBarItem title="Lists" id="KMO-ae-6M2"/>
-                                    <tabBarItem title="Settings" id="Cvr-cM-4Sh"/>
-                                </items>
-                            </tabBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dPh-6A-1S9">
-                                <rect key="frame" x="0.0" y="138" width="375" height="480"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vZy-3k-t5v">
+                                <rect key="frame" x="0.0" y="86" width="375" height="581"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TextInputCell" id="j2z-d5-ZAF" customClass="TextInputTableViewCell" customModule="GList" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TextInputCell" id="fIt-fv-Qqt" customClass="TextInputTableViewCell" customModule="GList" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j2z-d5-ZAF" id="Fo4-UG-6kw">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fIt-fv-Qqt" id="yVd-Rr-bVq">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cKc-2H-Jhm">
-                                                    <rect key="frame" x="8" y="8" width="359" height="30"/>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6dV-bd-QYD">
+                                                    <rect key="frame" x="8" y="0.0" width="359" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="359" id="GbN-GD-crf"/>
+                                                        <constraint firstAttribute="height" constant="35" id="cw4-I1-PyS"/>
+                                                    </constraints>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="6dV-bd-QYD" firstAttribute="leading" secondItem="yVd-Rr-bVq" secondAttribute="leadingMargin" id="8is-pW-mUA"/>
+                                                <constraint firstItem="6dV-bd-QYD" firstAttribute="top" secondItem="yVd-Rr-bVq" secondAttribute="top" id="NwU-9U-hsM"/>
+                                            </constraints>
                                         </tableViewCellContentView>
-                                        <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="cKc-2H-Jhm" secondAttribute="bottom" constant="6" id="4Rs-eh-cCz"/>
-                                            <constraint firstItem="cKc-2H-Jhm" firstAttribute="top" secondItem="j2z-d5-ZAF" secondAttribute="top" constant="8" id="LPb-6o-YcL"/>
-                                            <constraint firstItem="cKc-2H-Jhm" firstAttribute="leading" secondItem="j2z-d5-ZAF" secondAttribute="leading" constant="8" id="Zcu-A4-Mjm"/>
-                                            <constraint firstAttribute="trailing" secondItem="cKc-2H-Jhm" secondAttribute="trailing" constant="8" id="kNx-yf-Qh7"/>
-                                        </constraints>
                                         <connections>
-                                            <outlet property="textField" destination="cKc-2H-Jhm" id="mRa-D1-HFA"/>
+                                            <outlet property="textField" destination="6dV-bd-QYD" id="eho-Uf-XvD"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="dDt-e5-mPf"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="zZY-Ed-cj7"/>
+                                    <outlet property="dataSource" destination="gFy-cY-xl3" id="MB9-Ra-xzw"/>
+                                    <outlet property="delegate" destination="gFy-cY-xl3" id="Vx7-r6-EDG"/>
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="yiM-ub-daj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="6Hf-UN-DbX"/>
-                            <constraint firstItem="dPh-6A-1S9" firstAttribute="top" secondItem="yiM-ub-daj" secondAttribute="bottom" id="7qs-7x-Av9"/>
-                            <constraint firstAttribute="trailing" secondItem="iCX-FB-nfh" secondAttribute="trailing" id="AO3-Ih-SfA"/>
-                            <constraint firstItem="iCX-FB-nfh" firstAttribute="top" secondItem="dPh-6A-1S9" secondAttribute="bottom" id="GAp-y0-l2r"/>
-                            <constraint firstItem="yiM-ub-daj" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="J0v-BF-ZPO"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iCX-FB-nfh" secondAttribute="bottom" id="Q5a-0n-8sy"/>
-                            <constraint firstAttribute="trailing" secondItem="dPh-6A-1S9" secondAttribute="trailing" id="TI8-HA-PPm"/>
-                            <constraint firstItem="dPh-6A-1S9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Yz3-OC-t1H"/>
-                            <constraint firstItem="iCX-FB-nfh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="i4L-OG-avO"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="yiM-ub-daj" secondAttribute="trailing" id="krh-qR-mSi"/>
+                            <constraint firstItem="VCx-Us-LZ3" firstAttribute="leading" secondItem="DQy-Py-FKb" secondAttribute="leading" id="O6W-59-N0v"/>
+                            <constraint firstItem="5qJ-jc-Nwa" firstAttribute="top" secondItem="vZy-3k-t5v" secondAttribute="bottom" id="d5R-CE-eNL"/>
+                            <constraint firstItem="vZy-3k-t5v" firstAttribute="top" secondItem="VCx-Us-LZ3" secondAttribute="bottom" id="foO-wb-385"/>
+                            <constraint firstItem="VCx-Us-LZ3" firstAttribute="top" secondItem="hB6-1f-GsQ" secondAttribute="bottom" id="i0L-hf-dkM"/>
+                            <constraint firstAttribute="trailing" secondItem="VCx-Us-LZ3" secondAttribute="trailing" id="jhM-Uz-1Px"/>
+                            <constraint firstAttribute="trailing" secondItem="vZy-3k-t5v" secondAttribute="trailing" id="rjA-9B-e0L"/>
+                            <constraint firstItem="vZy-3k-t5v" firstAttribute="leading" secondItem="DQy-Py-FKb" secondAttribute="leading" id="zYW-oF-O2W"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="GList" id="7ao-VC-ccg">
-                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="uO5-hd-xvu"/>
-                        <rightBarButtonItems>
-                            <barButtonItem systemItem="search" id="k21-9w-4UK"/>
-                            <barButtonItem systemItem="action" id="dHA-VY-qFs"/>
-                        </rightBarButtonItems>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="tableview" destination="dPh-6A-1S9" id="js4-Lh-gj3"/>
-                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EAg-bs-g2j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2720.8000000000002" y="138.98050974512745"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="LmG-jR-2Yv">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qzd-Ub-y18" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rHp-aU-0p9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ZwK-ek-YJV"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BgS-j1-y35" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2015.2" y="138.98050974512745"/>
+            <point key="canvasLocation" x="424.80000000000001" y="-87.706146926536732"/>
         </scene>
     </scenes>
 </document>
