--- a/GList/Base.lproj/Main.storyboard
+++ b/GList/Base.lproj/Main.storyboard
@@ -22,13 +22,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s02-jg-TFw">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="0.57534605704697983" colorSpace="calibratedRGB"/>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="VCx-Us-LZ3">
                                 <rect key="frame" x="0.0" y="20" width="375" height="66"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cart Total" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ijM-R1-0Gh">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wA-JT-4vo">
@@ -42,6 +46,8 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vZy-3k-t5v">
                                 <rect key="frame" x="0.0" y="86" width="375" height="581"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="0.75722336769104004" green="0.49796253442764282" blue="0.75165301561355591" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="sectionIndexBackgroundColor" red="0.75722336769104004" green="0.49796253442764282" blue="0.75165301561355591" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TextInputCell" id="fIt-fv-Qqt" customClass="TextInputTableViewCell" customModule="GList" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -79,7 +85,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="s02-jg-TFw" firstAttribute="leading" secondItem="DQy-Py-FKb" secondAttribute="leading" id="4Yu-bR-hbU"/>
                             <constraint firstItem="VCx-Us-LZ3" firstAttribute="leading" secondItem="DQy-Py-FKb" secondAttribute="leading" id="O6W-59-N0v"/>
+                            <constraint firstItem="s02-jg-TFw" firstAttribute="top" secondItem="hB6-1f-GsQ" secondAttribute="bottom" id="UFN-pp-bQi"/>
+                            <constraint firstItem="5qJ-jc-Nwa" firstAttribute="top" secondItem="s02-jg-TFw" secondAttribute="bottom" id="VV7-17-auZ"/>
+                            <constraint firstAttribute="trailing" secondItem="s02-jg-TFw" secondAttribute="trailing" id="WR7-Tp-8Ys"/>
                             <constraint firstItem="5qJ-jc-Nwa" firstAttribute="top" secondItem="vZy-3k-t5v" secondAttribute="bottom" id="d5R-CE-eNL"/>
                             <constraint firstItem="vZy-3k-t5v" firstAttribute="top" secondItem="VCx-Us-LZ3" secondAttribute="bottom" id="foO-wb-385"/>
                             <constraint firstItem="VCx-Us-LZ3" firstAttribute="top" secondItem="hB6-1f-GsQ" secondAttribute="bottom" id="i0L-hf-dkM"/>
